# sp_lab4

./: CMakeLists.txt
laba_4/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  calculator.cpp  calculator.h  cmake_install.cmake  main.cpp  myprogram  rules.ninja
